--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -1,5 +1,7 @@
 .main {
   margin: 3rem auto;
-  width: 90%;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
   max-width: 40rem;
 }
