--- a/components/ui/Card.module.css
+++ b/components/ui/Card.module.css
@@ -1,8 +1,8 @@
-.card {
+/* .card {
   background-color: white;
   border-radius: 6px;
   width: 500px;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
-}
+} */
