--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,4 +1,4 @@
-.items {
+/* .items {
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -26,4 +26,4 @@
   margin-left: 10px;
   display: flex;
   justify-content: space-between;
-}
+} */
